aligned the content and added background color. Cleaned up the html. Traits are now semantically correct.

--- a/iamgenius/app/styles/global.css
+++ b/iamgenius/app/styles/global.css
@@ -56,3 +56,17 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+p {
+  padding-bottom: 0.5rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding-bottom: 0.5rem;
+  margin-left: -1.2rem;
+}
